# api/assistant-api/api/assistant/create_assistant_provider.go
@@ -10,9 +10,12 @@ import (
 	"errors"
 	"fmt"
 
+	agentkit "github.com/rapidaai/api/assistant-api/internal/llm/agentkit"
 	internal_services "github.com/rapidaai/api/assistant-api/internal/services"
+	pkg_errors "github.com/rapidaai/pkg/errors"
 	"github.com/rapidaai/pkg/types"
 	"github.com/rapidaai/pkg/utils"
+	"github.com/rapidaai/pkg/validator"
 	assistant_api "github.com/rapidaai/protos"
 	"google.golang.org/protobuf/encoding/protojson"
 )
@@ -69,6 +72,126 @@ func (assistantApi *assistantGrpcApi) CreateAssistantProvider(ctx context.Contex
 				AssistantProviderModel: aProviderModel,
 			})
 	case *assistant_api.CreateAssistantProviderRequest_Agentkit:
+		var transportSecurity *string
+		var tlsVerification *string
+		var tlsServerName *string
+		var connectTimeoutMs *uint32
+		var keepaliveTimeMs *uint32
+		var keepaliveTimeoutMs *uint32
+		var maxRecvMessageBytes *uint32
+		var maxSendMessageBytes *uint32
+		if validator.OneOf(provider.Agentkit.GetCertificate(), agentkit.CertificateInsecure, agentkit.CertificateSkipVerify) {
+			return &assistant_api.GetAssistantProviderResponse{
+				Code:    pkg_errors.CreateAssistantInvalidAgentKitCertificate.HTTPStatusCodeInt32(),
+				Success: false,
+				Error: &assistant_api.Error{
+					ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitCertificate.Code),
+					ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitCertificate.Error,
+					HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitCertificate.ErrorMessage,
+				},
+			}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitCertificate.Error)
+		}
+		if provider.Agentkit.GetTransportSecurity() != "" {
+			transportSecurity = utils.Ptr(provider.Agentkit.GetTransportSecurity())
+			if !validator.OneOf(*transportSecurity, agentkit.TransportSecurityTLS, agentkit.TransportSecurityPlaintext) {
+				return &assistant_api.GetAssistantProviderResponse{
+					Code:    pkg_errors.CreateAssistantInvalidAgentKitTransport.HTTPStatusCodeInt32(),
+					Success: false,
+					Error: &assistant_api.Error{
+						ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitTransport.Code),
+						ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitTransport.Error,
+						HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitTransport.ErrorMessage,
+					},
+				}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitTransport.Error)
+			}
+		}
+		if provider.Agentkit.GetTlsVerification() != "" {
+			tlsVerification = utils.Ptr(provider.Agentkit.GetTlsVerification())
+			if !validator.OneOf(*tlsVerification, agentkit.TLSVerificationVerify, agentkit.TLSVerificationSkipVerify) {
+				return &assistant_api.GetAssistantProviderResponse{
+					Code:    pkg_errors.CreateAssistantInvalidAgentKitTLSVerification.HTTPStatusCodeInt32(),
+					Success: false,
+					Error: &assistant_api.Error{
+						ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitTLSVerification.Code),
+						ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitTLSVerification.Error,
+						HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitTLSVerification.ErrorMessage,
+					},
+				}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitTLSVerification.Error)
+			}
+		}
+		if provider.Agentkit.GetTlsServerName() != "" {
+			tlsServerName = utils.Ptr(provider.Agentkit.GetTlsServerName())
+		}
+		if provider.Agentkit.GetConnectTimeoutMs() != 0 {
+			connectTimeoutMs = utils.Ptr(provider.Agentkit.GetConnectTimeoutMs())
+			if !validator.Between(int(*connectTimeoutMs), agentkit.MinConnectTimeoutMs, agentkit.MaxConnectTimeoutMs) {
+				return &assistant_api.GetAssistantProviderResponse{
+					Code:    pkg_errors.CreateAssistantInvalidAgentKitConnectTimeout.HTTPStatusCodeInt32(),
+					Success: false,
+					Error: &assistant_api.Error{
+						ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitConnectTimeout.Code),
+						ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitConnectTimeout.Error,
+						HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitConnectTimeout.ErrorMessage,
+					},
+				}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitConnectTimeout.Error)
+			}
+		}
+		if provider.Agentkit.GetKeepaliveTimeMs() != 0 {
+			keepaliveTimeMs = utils.Ptr(provider.Agentkit.GetKeepaliveTimeMs())
+			if !validator.Between(int(*keepaliveTimeMs), agentkit.MinKeepaliveTimeMs, agentkit.MaxKeepaliveTimeMs) {
+				return &assistant_api.GetAssistantProviderResponse{
+					Code:    pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTime.HTTPStatusCodeInt32(),
+					Success: false,
+					Error: &assistant_api.Error{
+						ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTime.Code),
+						ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTime.Error,
+						HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTime.ErrorMessage,
+					},
+				}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTime.Error)
+			}
+		}
+		if provider.Agentkit.GetKeepaliveTimeoutMs() != 0 {
+			keepaliveTimeoutMs = utils.Ptr(provider.Agentkit.GetKeepaliveTimeoutMs())
+			if !validator.Between(int(*keepaliveTimeoutMs), agentkit.MinKeepaliveTimeoutMs, agentkit.MaxKeepaliveTimeoutMs) {
+				return &assistant_api.GetAssistantProviderResponse{
+					Code:    pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTimeout.HTTPStatusCodeInt32(),
+					Success: false,
+					Error: &assistant_api.Error{
+						ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTimeout.Code),
+						ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTimeout.Error,
+						HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTimeout.ErrorMessage,
+					},
+				}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitKeepaliveTimeout.Error)
+			}
+		}
+		if provider.Agentkit.GetMaxRecvMessageBytes() != 0 {
+			maxRecvMessageBytes = utils.Ptr(provider.Agentkit.GetMaxRecvMessageBytes())
+			if !validator.Between(int(*maxRecvMessageBytes), agentkit.MinMessageBytes, agentkit.MaxMessageBytes) {
+				return &assistant_api.GetAssistantProviderResponse{
+					Code:    pkg_errors.CreateAssistantInvalidAgentKitMaxRecvMessageBytes.HTTPStatusCodeInt32(),
+					Success: false,
+					Error: &assistant_api.Error{
+						ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitMaxRecvMessageBytes.Code),
+						ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitMaxRecvMessageBytes.Error,
+						HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitMaxRecvMessageBytes.ErrorMessage,
+					},
+				}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitMaxRecvMessageBytes.Error)
+			}
+		}
+		if provider.Agentkit.GetMaxSendMessageBytes() != 0 {
+			maxSendMessageBytes = utils.Ptr(provider.Agentkit.GetMaxSendMessageBytes())
+			if !validator.Between(int(*maxSendMessageBytes), agentkit.MinMessageBytes, agentkit.MaxMessageBytes) {
+				return &assistant_api.GetAssistantProviderResponse{
+					Code:    pkg_errors.CreateAssistantInvalidAgentKitMaxSendMessageBytes.HTTPStatusCodeInt32(),
+					Success: false,
+					Error: &assistant_api.Error{
+						ErrorCode:    uint64(pkg_errors.CreateAssistantInvalidAgentKitMaxSendMessageBytes.Code),
+						ErrorMessage: pkg_errors.CreateAssistantInvalidAgentKitMaxSendMessageBytes.Error,
+						HumanMessage: pkg_errors.CreateAssistantInvalidAgentKitMaxSendMessageBytes.ErrorMessage,
+					},
+				}, errors.New(pkg_errors.CreateAssistantInvalidAgentKitMaxSendMessageBytes.Error)
+			}
+		}
 		agentKitProvider, err := assistantApi.assistantService.CreateAssistantProviderAgentkit(
 			ctx,
 			iAuth,
@@ -77,6 +200,14 @@ func (assistantApi *assistantGrpcApi) CreateAssistantProvider(ctx context.Contex
 			provider.Agentkit.GetAgentKitUrl(),
 			provider.Agentkit.GetCertificate(),
 			provider.Agentkit.GetMetadata(),
+			transportSecurity,
+			tlsVerification,
+			tlsServerName,
+			connectTimeoutMs,
+			keepaliveTimeMs,
+			keepaliveTimeoutMs,
+			maxRecvMessageBytes,
+			maxSendMessageBytes,
 		)
 		if err != nil {
 			return utils.Error[assistant_api.GetAssistantProviderResponse](
